  [Michele Simionato]
  * Extended conditioned GMFs to number_of_ground_motion_fields > 1
  * Disabled SLOW MODE on macOS, since the amount of free memory returned by
    psutil cannot be trusted
  * Speeding up `count_ruptures` for multifault sources, which gives a *huge*
    in some calculations (like event_based for Dominican Republic)

  [Marco Pagani]
  * Fixed a bug in the code that resamples a line, with a small effect
    on the hazard of models containing simple fault sources

  [Michele Simionato]
  * Optimized the calculation of quantile hazard maps (7x)
  * Internal: stored `_rates` instead of `_poes` in classical calculations

  [Lana Todorovic, Anirudh Rao]
  * Added several regional liquefaction models to the secondary perils module,
    including:
    ZhuEtAl2017LiquefactionCoastal and ZhuEtAl2017LiquefactionGeneral,
    RashidianBaise2020Liquefaction, AllstadtEtAl2022Liquefaction,
    AkhlagiEtAl2021LiquefactionA and AkhlagiEtAl2021LiquefactionB
    (experimental),
    Bozzoni2021LiquefactionEurope, TodorovicSilva2022NonParametric
  * Added new site parameters required by some of these new models to site.py
  * Added LiqOccur as a valid IMT, referring to the occurrence or
    non-occurrence of liquefaction at a site
  * Added basic documentation for the secondary perils module
    (originally written by @cossatot and extended by @LanaTodorovic93)
  * Added rock-slope co-seismic failure computation of Grant et al. (2016)

  [Michele Simionato]
  * Fixed sanity check on avg_losses and aggrisk breaking for event_based_damage
    calculations following event_based_risk calculations
  * Fixed a bug in avg_gmf causing the average to be computed incorrectly
  * Removed the XML exporters for hazard curves, maps and uniform hazard spectra
    after 7 years of deprecation

  [Paolo Tormene]
  * In the WebUI users are not allowed to see other users outputs by default
    (the old default can be obtained setting ACL_ON = False)
