@@ -16,5 +16,6 @@ rupture_model_file = earthquake_rupture_model_USGS.xml
 intensity_measure_types = PGA
 truncation_level = 3
 maximum_distance = 500
+maximum_distance_stations = 200
 number_of_ground_motion_fields = 2
 gsim = AbrahamsonEtAl2015SSlab
